/*
 * Copyright(c) 2012-2018 Intel Corporation
 * SPDX-License-Identifier: BSD-3-Clause-Clear
 */
syntax = "proto3";
package octf.proto;
import "opts.proto";

message FrameworkPaths {
    // Path where nodes configuration files are stored
    string settings = 1;

    // Path where UNIX sockets are created
    string unixsocket = 2;

    // Path where collected traces are located
    string trace = 3;

    // Path where running state is located
    string run = 4;
}

message FrameworkConfiguration {
    FrameworkPaths paths = 1;
}
